--- a/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/web/res/pivot.css
+++ b/wicket-pivot/src/main/java/ro/fortsoft/wicket/pivot/web/res/pivot.css
@@ -27,40 +27,44 @@
 	padding: 5px;
 }
 
-.area .value-container {
+.area .field {
 	float: left;
 	padding: 5px;
 	margin-right: 5px;
 	border: 1px solid #eee;
-	background-color: #f5f5f5;
+	background-color: #336699;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
+	font-size: 11px;
+	font-weight: bold;	
+	line-height: 14px;
+	color: #ffffff;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	white-space: nowrap;
+	vertical-align: baseline;
 }
 
-/*
-.area .value {
-	margin-left: 2px;
+.area .field-number {
+	background-color: #669966;	
 }
-*/
 
-.area ol.values {
+.area ol.fields {
 	list-style-type: none;
 	float: left;
 	display: block;
 }
 
-.area .initiate {
-    cursor: move;
-}
-
 .pivot-placeholder {
-    background: #f0f0f0;
-    border: 1px dashed #ddd;
-    margin: 3px;
-    height: 24px !important;
-    float: left;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;    
+	float: left;
+	padding: 5px;
+	margin-right: 5px;
+	border: 1px dashed #ddd;
+	background-color: #f0f0f0;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	line-height: 14px;
+	white-space: nowrap;
+	vertical-align: baseline;
 }
